devops/config/ingress.yaml
###########################################################################
# Ingress resource (gateway)
###########################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - host: open.d10l.de
    http:
      paths:
      - path: /developer-portal-ui/.*
        backend:
          serviceName: developer-portal-ui
          servicePort: 80
  - host: api.d10l.de
    http:
      paths:
      - path: /identities/.*
        backend:
          serviceName: identities
          servicePort: 9090
---
